--- a/QuanLiVLXD/QuanLiVLXD/GUI.csproj
+++ b/QuanLiVLXD/QuanLiVLXD/GUI.csproj
@@ -82,6 +82,12 @@
     <Compile Include="frmKhachHang.Designer.cs">
       <DependentUpon>frmKhachHang.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmKho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmKho.Designer.cs">
+      <DependentUpon>frmKho.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLoaiHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,12 +111,6 @@
     </Compile>
     <Compile Include="frmNhapHang.Designer.cs">
       <DependentUpon>frmNhapHang.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmNhapHangg.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmNhapHangg.Designer.cs">
-      <DependentUpon>frmNhapHangg.cs</DependentUpon>
     </Compile>
     <Compile Include="frmQuanliTK.cs">
       <SubType>Form</SubType>
@@ -150,6 +150,9 @@
     <EmbeddedResource Include="frmKhachHang.resx">
       <DependentUpon>frmKhachHang.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmKho.resx">
+      <DependentUpon>frmKho.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLoaiHang.resx">
       <DependentUpon>frmLoaiHang.cs</DependentUpon>
     </EmbeddedResource>
@@ -161,9 +164,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmNhapHang.resx">
       <DependentUpon>frmNhapHang.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmNhapHangg.resx">
-      <DependentUpon>frmNhapHangg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmQuanliTK.resx">
       <DependentUpon>frmQuanliTK.cs</DependentUpon>
