--- a/QuanLiVLXD/DTO/DTO.csproj
+++ b/QuanLiVLXD/DTO/DTO.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO_BCXuat.cs" />
     <Compile Include="DTO_CTHDXUAT.cs" />
     <Compile Include="DTO_HangHoa.cs" />
     <Compile Include="DTO_HDXUAT.cs" />
