--- a/QuanLiVLXD/BUS/BUS.csproj
+++ b/QuanLiVLXD/BUS/BUS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS_BCNhap.cs" />
     <Compile Include="BUS_BCXuat.cs" />
     <Compile Include="BUS_CTHDX.cs" />
     <Compile Include="BUS_HangHoa.cs" />
