--- a/QuanLiVLXD/DAO/DAO.csproj
+++ b/QuanLiVLXD/DAO/DAO.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DAO_BCNhap.cs" />
     <Compile Include="DAO_BCXuat.cs" />
     <Compile Include="DAO_CTHDXUAT.cs" />
+    <Compile Include="DAO_DonGia.cs" />
     <Compile Include="DAO_HangHoa.cs" />
     <Compile Include="DAO_HDNHAP.cs" />
     <Compile Include="DAO_HDXUAT.cs" />
