--- a/QuanLiVLXD/BUS/BUS.csproj
+++ b/QuanLiVLXD/BUS/BUS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BUS_BCNhap.cs" />
     <Compile Include="BUS_BCXuat.cs" />
+    <Compile Include="BUS_CTHDN.cs" />
     <Compile Include="BUS_CTHDX.cs" />
     <Compile Include="BUS_DonGia.cs" />
     <Compile Include="BUS_HangHoa.cs" />
